2008-05-28  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #8522: Datetime shifts on copy and localize (timezone related)

2008-05-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8496: TCEforms: Help Icon is not in the docheader
	* Fixed bug #7837: Generate Icons by Default - Part 1
	* Fixed bug #8504: help icon is not aligned in TCEform (Thanks to Steffen Kamper)

2008-05-28  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #8418: visual problems of BE[accessListRenderMode] (thanx to Steffen Kamper)

2008-05-28  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8494: Admin Tools => DB Check => Find Filename has duplicate selectboxes

2008-05-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8501: Template module - overview (together with Steffen Kamper)
	* Fixed bug #8412: typo3/file_edit.php replaces ###PATH### in the edited file with the value of $this->title (thanks to Andreas Wagner)

2008-05-25  Dmitry Dulepov  <dmitry@typo3.org>

    * Fixed bug #4455: pid reset to 10000 in Constant Editor

2008-05-24  Oliver Hader  <oliver@typo3.org>

	* Set TYPO3 version to 4.3-dev and cleaned up NEWS.txt

2008-05-24  Ingo Renner  <ingo@typo3.org>

	* Removed empty line at end of file in t3lib/thumbs.php

2008-05-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7509: TypoScript Editor doesn't save changes in IE

2008-05-20  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8263: t3editor should not highlight decimals (thanks to Tobias Liebig)
	* Fixed bug #8049: Save button don't work when deactivating t3editor (thanks to Tobias Liebig)

2008-05-20  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8445: Align group fields in TCEforms, credits Steffen Kamper
	* Fixed bug #8282: option-div is not styled in user-accesslist, credits Steffen Kamper

2008-05-20  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #8460: Shortcutmenu needs a proper access check comment (thanks to Stefano Kowalke)