@@ -69,10 +69,11 @@ class BackendSearchMenu implements backend_toolbarItem {
 	 * @return	string		workspace selector as HTML select
 	 */
 	public function render() {
+		$title = $GLOBALS['LANG']->sL('LLL:EXT:lang/locallang_core.xml:labels.search',1);
 		$this->addJavascriptToBackend();
 		$searchMenu = array();
 
-		$searchMenu[] = '<a href="#" class="toolbar-item"><img'.t3lib_iconWorks::skinImg($this->backPath, 'gfx/magnifier.png', 'width="16" height="16"').' title="Search" alt="" /></a>';
+		$searchMenu[] = '<a href="#" class="toolbar-item"><img'.t3lib_iconWorks::skinImg($this->backPath, 'gfx/magnifier.png', 'width="16" height="16"').' title="'.$title.'" alt="'.$title.'" /></a>';
 
 		$searchMenu[] = '<div class="toolbar-item-menu" style="display: none;">';
 		$searchMenu[] = '<input type="text" id="search-query" name="search-query" value="" />';
